[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/revealPing/revealPing.gd" type="Script" id=1]
[ext_resource path="res://assets/images/reveal_ping_wave.png" type="Texture" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/reveal_ping_wave.png-bc4529eb42b395f530f302f720475d1f.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/reveal_ping_wave.png-bc4529eb42b395f530f302f720475d1f.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/reveal_ping_wave.png-bc4529eb42b395f530f302f720475d1f.stex"

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/reveal_ping_wave.png-bc4529eb42b395f530f302f720475d1f.stex"

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/reveal_ping_wave.png-bc4529eb42b395f530f302f720475d1f.stex"

[node name="revealPing" type="Node2D"]
script = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = SubResource( 1 )

[node name="Light2D2" type="Light2D" parent="."]
texture = SubResource( 2 )
texture_scale = 1.5

[node name="Light2D3" type="Light2D" parent="."]
texture = SubResource( 3 )
texture_scale = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.709804, 0.709804, 0.780392, 0.427451 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.709804, 0.709804, 0.780392, 0.427451 )
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 4 )

[node name="Sprite3" type="Sprite" parent="."]
modulate = Color( 0.709804, 0.709804, 0.780392, 0.427451 )
scale = Vector2( 2, 2 )
texture = SubResource( 5 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
